<resources>
    <string name="app_name" translatable="false">Mova</string>
    <string name="splash_screen_logo_text">Mova</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_explore">Explore</string>
    <string name="bottom_nav_my_list">My List</string>
    <string name="bottom_nav_upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="see_all">See all</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="popular_tv_series">Popular Tv Series</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="search">Search</string>
    <string name="filter">filter</string>
    <string name="top_rated_tv_series">Top Rated Tv Series</string>
    <string name="sort_amp_filter"><![CDATA[Sort & Filter]]></string>
    <string name="categories">Categories</string>
    <string name="movie">Movie</string>
    <string name="tv_series">Tv Series</string>
    <string name="genre">Genre</string>
    <string name="movies">Movies</string>
    <string name="tv">Tv</string>
    <string name="tv_name_with_original_name" translatable="false">%1$s ( %2$s )</string>

    <string name="voteAverage">%1$s (%2$s)</string>
    <string name="voteAverageDetail">%1$s (%2$s reviews)</string>
    <string name="release_date_genre">%1$s  %2$s</string>
    <string name="runtime">%1$sh %2$sm</string>
    <string name="season_count">%s Seasons</string>

    <string name="share">Share</string>
    <string name="favorite_list">Favorite List</string>
    <string name="watchList">Watch List</string>
    <string name="detail_bottom_sheet_movie_info">Details and More</string>
    <string name="detail_bottom_sheet_tv_info">Episodes and More</string>

    <string name="time_periods">Time/Periods</string>
    <string name="retry">Retry</string>
    <string name="sort">Sort</string>
    <string name="popularity">Popularity</string>
    <string name="latest_release">Latest Release</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="error_didnt_download">Didn\'t download genre options. PLease check your internet connection</string>
    <string name="all_periods">All Periods</string>
    <string name="internet_error">"Oops! Please check your internet connection."</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong. Please try again.</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="navigate_up">Navigate up</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="languages">Languages</string>
    <string name="settings">Settings</string>

    <string name="language_english">English</string>
    <string name="language_turkish">Turkish</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_french">French</string>
    <string name="language_german">German</string>


    <string name="overview">Overview</string>
    <string name="actor">Actor</string>
    <string name="director">Director</string>

    <string name="add_favorite_list">Add My Favorite List</string>
    <string name="add_watch_list">Add My Watch List</string>
    <string name="go_movies_tmdb_site">Go tmdb url that the movie</string>
    <string name="director_title">Director: </string>
    <string name="singular_creator_title">Creator: </string>
    <string name="plural_creator_title">Creators: <br /> </string>

    <string name="watch_now">Watch Now</string>
    <string name="stream">Stream</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="provides_now_watch_information_by_justwatch">Provides \'Now Watch Information\' by <font color="#FFEB3B">JustWatch</font></string>
    <string name="person">Person</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="try_again">TRY AGAIN</string>

    <string name="person_detail_title">Details:</string>
    <string name="person_date_of_birth_title">Date of birth:</string>
    <string name="person_date_of_death_title">Date of death:</string>
    <string name="person_nation_title">Nation:</string>

    <string name="character">Character</string>
    <string name="department">Department</string>
    <string name="as_director_work">As Director\'s Works</string>
    <string name="as_actor_works">As Actor\'s Works</string>

    <string name="trailers">Trailers</string>
    <string name="recommendation">Recommendations</string>
    <string name="similar">Similar</string>

    <string name="login_to_your_account">Login to Your Account</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forget_the_password">Forget the password?</string>
    <string name="forget_password">Forget password</string>
    <string name="back_to_login">Back to login</string>
    <string name="check_your_email">Check your email</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure_log_out">Are you sure you want to log out?</string>
    <string name="log_out_message">After log out, you can\'t add movie to favorite or watch lists</string>
    <string name="successfully_log_out">Successfully log out</string>
    <string name="couldn_t_find_any_videos_of_this_film">Couldn\'t find any videos of this film</string>

    <string name="have_good_weekend">Have a good weekend</string>
    <string name="movie_notification">Can\'t decide what to watch this weekend? Find a good movie to watch and enjoy!</string>
    <string name="allow">Allow</string>
    <string name="it_is_necc_for_notification">it is necessary to show notification</string>



    <string name="cancel">Cancel</string>
    <string name="must_login_able_to_add_in_list"> You must to login to able to add in list</string>
    <string name="error_field_empty">This field can\'t be empty</string>
    <string name="error_user">You must login to do this operation</string>


    // FirebaseAuth Error Message
    <string name="error_invalid_custom_token">Invalid custom token provided.</string>
    <string name="error_custom_token_mismatch">The custom token provided does not match the stored API key.</string>
    <string name="error_invalid_credential">Invalid credential provided.</string>
    <string name="error_invalid_email">Invalid email address provided.</string>
    <string name="error_wrong_password">Incorrect password provided.</string>
    <string name="error_user_mismatch">The credential provided does not match the stored account.</string>
    <string name="error_requires_recent_login">The user needs to have recently signed in.</string>
    <string name="error_account_exists_with_different_credential">User already exists with different credential.</string>
    <string name="error_email_already_in_use">Email address is already in use.</string>
    <string name="error_credential_already_in_use">Credential is already in use.</string>
    <string name="error_user_disabled">User account has been disabled.</string>
    <string name="error_user_token_expired">User token has expired.</string>
    <string name="error_user_not_found">User account not found.</string>
    <string name="error_invalid_user_token">Invalid user token provided.</string>
    <string name="error_operation_not_allowed">This operation is not allowed.</string>
    <string name="error_weak_password">Password is too weak.</string>


    // FirebaseFirestore Error Message
    <string name="permission_denied_error">You do not have the necessary permissions to perform this operation. Please contact the administrator.</string>
    <string name="not_found_error">The requested record/document could not be found. Please try a different query.</string>
    <string name="already_exists_error">The record could not be added because it already exists. Please add a different record.</string>
    <string name="aborted_error">The operation could not be completed because the required resource is no longer available. Please try again later.</string>
    <string name="unavailable_error">Unable to connect to Firebase servers. Please check your internet connection and try again.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="info">Info</string>

    <string name="remind_me">Remind Me</string>
    <string name="upcoming_movie_set_big_context">Hey there! Just a friendly reminder about the movie you were looking forward to. We\'re thrilled to let you know that %s is now showing in released!</string>
    <string name="upcoming_movie_release_basic">%s Now Showing! Grab Your Friends and Enjoy the Show!</string>
    <string name="upcoming_movie_release_title">Upcoming Movie</string>


</resources>