<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature_upcoming.presentation.UpComingFragment">

    <TextView
        android:id="@+id/comingText"
        style="@style/Mova.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/coming_soon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comingDateText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        app:layout_constraintBottom_toBottomOf="@+id/comingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/comingText"
        tools:text="2 June - 19 June" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/comingTypeChipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        app:checkedChip="@id/movieChip"
        app:layout_constraintEnd_toEndOf="@+id/comingDateText"
        app:layout_constraintStart_toStartOf="@+id/comingText"
        app:layout_constraintTop_toBottomOf="@+id/comingText"
        app:singleLine="true"
        app:singleSelection="true">


        <com.google.android.material.chip.Chip
            android:id="@+id/movieChip"
            style="@style/Mova.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movie"
            app:chipStrokeColor="@color/red"
            app:chipStrokeWidth="2dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/tvSeriesChip"
            style="@style/Mova.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_series"
            app:chipStrokeColor="@color/red"
            app:chipStrokeWidth="2dp" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/medium_margin"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comingTypeChipGroup"
        tools:itemCount="5"
        tools:listitem="@layout/coming_soon_item" />

</androidx.constraintlayout.widget.ConstraintLayout>